Adding mock of places

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
     <!-- Google maps API key -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaVZuqrJbAYSsLNqHoHPpz1TvJr83shHE&libraries=places"></script>
 
+    <!-- Positions for each user -->
+    <script type="text/javascript">
+      globalLat = [0, 0, 0, 0];
+      globalLon = [0, 0, 0, 0];
+    </script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
