--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaVZuqrJbAYSsLNqHoHPpz1TvJr83shHE&libraries=places"></script>
 
     <!-- Positions for each user -->
+    <script type="text/javascript" src="%PUBLIC_URL%/places.js"></script>
+
+    <!-- Positions for each user -->
     <script type="text/javascript">
       globalLat = [0, 0, 0, 0];
       globalLon = [0, 0, 0, 0];
