--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
 
     <!-- Positions for each user -->
     <script type="text/javascript">
-      globalLat = [0, 0, 0, 0];
-      globalLon = [0, 0, 0, 0];
+      globalPos = [];
     </script>
 
     <!--
