--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/potato.ico">
 
     <!-- Google maps API key -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaVZuqrJbAYSsLNqHoHPpz1TvJr83shHE&libraries=places"></script>
