--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
     <!-- Positions for each user -->
     <script type="text/javascript" src="%PUBLIC_URL%/places.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:800i" rel="stylesheet">
 
     <!-- Positions for each user -->
     <script type="text/javascript">
